--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -18,7 +18,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
- 
+ <!-- google one tap login will work only if this is added -->
+ <script src="https://accounts.google.com/gsi/client" async defer></script>
 
 
 </head>
